fixed horizontal scroll

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,10 +5,14 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+
+  overflow-x: hidden;
 }
 
 html {
-  font-size: 100%; /* 16px by default */
+  font-size: 100%;
+
+  overflow-x: hidden;
 }
 
 *,
